2009-02-02  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* ParseXSDoc.pm (xsdocparse): Always use Data::Dumper on MSWin32
	for serialization.  Storable seems to consistently fail there,
	stating 'Magic number checking on storable file failed'.

2009-02-02  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.xs
	* GSignal.xs: Hush some compiler warnings.

2009-01-20  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.pm: Add documentation for Glib->filename_to_uri and
	filename_from_uri.  Patch by Kevin Ryde.

2009-01-18  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GParamSpec.xs
	* t/e.t: Add Glib::ParamSpec->value_cmp.  Patch by Kevin Ryde.

2009-01-18  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/e.t: Use UTF-8 instead of ISO-8859-1 to encode umlauts.

2009-01-18  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GParamSpec.xs
	* t/e.t: Add Glib::ParamSpec->value_validate.  Patch by Kevin
	Ryde.

2009-01-18  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/options.t: Don't use UTF-8 umlauts unconditionally as this
	causes trouble on non-UTF-8 locales.

2009-01-18  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* MakeHelper.pm: Add
	Glib::MakeHelper->postamble_precompiled_headers to generate a make
	target for precompiling headers.

	* Makefile.PL: Use the above to create a 'precompiled-headers'
	target that precompiles gperl.h.  This speeds up the compilation
	of Glib by 16% on my machine.

2008-12-30  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GType.xs
	* t/c.t: Allow calling Glib::Flags::as_arrayref directly, as an
	alternative to the @{} syntax.  Patch by Kevin Ryde.

2008-11-24  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.pm
	* NEWS
	* README: Unstable release 1.211.

2008-11-22  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.xs
	* GOption.xs (added)
	* gperl.h
	* Makefile.PL
	* MANIFEST
	* t/options.t (added)
	* typemap: Add Glib::OptionContext and Glib::OptionGroup, wrapping
	glib's command line option parser.
